@@ -1,5 +1,6 @@
 Revision history for Module::Provision
 
+          - Made _license_keys public
           - Replaced C::U::TraitFor::MetaData with CPAN::Meta
           - Fixed appbase logic, again
           - Added module_metadate attribute
